apps/base/home-assistant/https-redirect-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: home-assistant
spec:
  redirectScheme:
    scheme: https
    permanent: true
